# fileengine_webdav

./: .dockerignore  .env-default  .gitignore  CMakeLists.txt  Containerfile  DEVELOPMENT_PLAN.md  IMPLEMENTATION.md  Makefile  README.md  SPECIFICATIONS.md  fileengine-webdav-bridge.service  fileengine-webdav-bridge.spec  test_webdav.sh  webdav-bridge.env
.github/workflows/: build-image.yml
debian/: changelog  control  copyright  fileengine-webdav-bridge.install  rules
design_documents/: REPLICATION_FAILOVER.md
include/: circuit_breaker.h  client_ip.h  grpc_client_wrapper.h  ldap_authenticator.h  path_resolver.h  utils.h  webdav_hardening.h  webdav_server.h
proto/: fileservice.proto
proto/include/: fileservice.grpc.pb.h
proto/src/: fileservice.grpc.pb.cc  fileservice.pb.cc  fileservice.pb.h
src/: grpc_client_wrapper.cpp  ldap_authenticator.cpp  main.cpp  path_resolver.cpp  utils.cpp  webdav_hardening.cpp  webdav_server.cpp
tests/: test_failover.cpp  test_grpc_client.cpp  test_ldap_auth.cpp  test_ldap_authenticator.cpp  test_main.cpp  test_path_resolver.cpp  test_utils.cpp  test_webdav_server.cpp
